--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -16,7 +16,7 @@
         <div class="navbar">
             <div class="contenedor">
                 <a href="../index.html">LX</a>
-                <a href="">Catálogo</a>
+                <a href="../paginas/catalogo.html">Catálogo</a>
                 <a href="../paginas/Equipo.html">Equipo</a>
                 <a href="../paginas/contacto.html" >Contacto</a>
             </div>
